# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  files_parser.py  find_difference.py  make_output.py
gendiff/diff_generation/: files_parser.py  gendiff.py
gendiff/formatters/: __init__.py  json_output.py  plain_output.py  stylish_ouput.py
gendiff/gendiff_library/: files_parser.py  find_difference.py  make_output.py  output_stylish.py
gendiff/gendiff_library/formats/: __init__.py  output_json.py  output_plain.py
gendiff/scripts/: cli.py  gendiff.py  start_cli.py
tests/: __init__.py  test_gendiff.py
tests/fixtures/: expectations_console.txt  expectations_stylish.txt  nested_file2.yaml
